[gd_scene load_steps=3 format=2]

[ext_resource path="res://BulletPatterns/BulletSpawn/BulletSpawn.gd" type="Script" id=1]
[ext_resource path="res://Spawn/SummonCircle/SummonCircle.tscn" type="PackedScene" id=2]

[node name="BulletSpawn" type="Node2D"]
script = ExtResource( 1 )

[node name="SummonCircle" parent="." instance=ExtResource( 2 )]

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[node name="ActiveTimer" type="Timer" parent="."]
one_shot = true

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

